# scholar-agent

./: .env.example  .gitignore  README.md  ai-interaction-logs.json  codecov.yml  docker-compose.yml  render.yaml  system-design-doc.md
.github/workflows/: auto-merge.yml  ci.yml
backend/: Dockerfile  Makefile  __init__.py  auth.py  db.py  main.py  paper_retriever.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  start.sh  test_rag_e2e.py
backend/agents/: __init__.py  analyzer.py  analyzer_agent.py  base.py  error_handling.py  gemini_client.py  model_router.py  observability.py  orchestrator.py  planner.py  planner_agent.py  quality_checker_agent.py  retriever_agent.py  schemas.py  state.py  synthesizer.py  synthesizer_agent.py  tools.py
backend/agents/llm/: __init__.py  base.py  factory.py  failover.py  gemini.py  groq_client.py  model_config.py
backend/cache/: __init__.py  redis_cache.py
backend/models/: database.py
backend/rag/: __init__.py  chunker.py  embeddings.py  hybrid_search.py  reranker.py  service.py  vector_store.py
backend/realtime/: __init__.py  events.py  manager.py
backend/services/: __init__.py  usage_tracker.py
backend/tests/: conftest.py  test_agents.py  test_agents_unit.py  test_api.py  test_cache.py  test_cors.py  test_e2e.py  test_error_handling.py  test_failover.py  test_integration.py  test_model_router.py  test_observability.py  test_orchestrator.py  test_performance.py  test_rag.py  test_real_llm_integration.py  test_usage_tracking.py  test_websocket.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/api/: client.ts  neonClient.ts
frontend/src/components/common/: Header.tsx  ProtectedRoute.tsx  StatusChip.test.tsx  StatusChip.tsx
frontend/src/components/dashboard/: AgentPipeline.tsx  CreateProjectModal.tsx  ProjectCard.tsx
frontend/src/components/how-it-works/: AgentJourney.css  AgentJourney.tsx  AgentJourneyCard.tsx  ComparisonTable.tsx  ExampleOutputPreview.tsx  FAQAccordion.tsx  ResearchGapDiagram.tsx
frontend/src/components/how-it-works/remotion/: AgentDeepDiveComposition.tsx  ResearchGapComposition.tsx
frontend/src/components/landing/: AnimatedWorkflow.tsx  Footer.tsx  HeroSection.tsx  LandingNavigation.tsx  QuickStartCTA.tsx  SocialProof.tsx  ValueCard.tsx  ValuePropositionGrid.tsx
frontend/src/hooks/: useBackendWarmup.ts  useProjectStatusPoller.ts  useProjectStream.test.tsx  useProjectStream.ts
frontend/src/pages/: AuthCallbackPage.tsx  DashboardPage.tsx  HowItWorksPage.tsx  KnowPage.tsx  LandingPage.tsx  LoginPage.tsx  ProjectDetailsPage.tsx  RegisterPage.tsx  ToolsPage.tsx
frontend/src/store/: authStore.ts  projectStore.ts
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/mocks/: handlers.ts  server.ts
frontend/src/types/: agent.ts  index.ts
