# Scholar Agent Backend - Project Configuration
# This file configures Ruff, Black, and other modern Python tooling

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-agent"
version = "1.0.0"
description = "Production-grade AI Research Assistant for automated literature reviews"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "pydantic>=2.8.0",
    "celery[redis]>=5.4.0",
    "qdrant-client>=1.9.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

# ===========================
# Ruff Configuration
# ===========================

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Line length to match Black
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "B904",    # Within except clause, raise with from
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "ARG001",  # Unused function argument (common in callbacks)
    "ARG002",  # Unused method argument
    
    # Style/formatting (handled by Black or acceptable in legacy)
    "W291",    # Trailing whitespace
    "W293",    # Blank line contains whitespace
    "E402",    # Module level import not at top of file
    
    # Refactoring/preference (enable later if desired)
    "PTH",     # Use pathlib (too many changes for now)
    "RUF013",  # Implicit Optional
    "PLC0415", # Import should be at top-level (lazy imports used frequently)
    "PLW0603", # Global statement
    "PLC0206", # Dict item iteration
    "SIM",     # Simplify (too many changes)
    "RUF012",  # Mutable class attributes
    "RUF022",  # Unsorted __all__
    "ERA001",  # Commented-out code
    "E722",    # Bare except (legacy code)
    "F841",    # Unused variable
    "E701",    # Multiple statements on one line
    "B905",    # zip() strict (Python 3.10+)
    "PLW2901", # Loop variable overwritten
    "F401",    # Unused imports (clean up later)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports, assertions, etc.
"tests/*" = [
    "S101", "ARG", "PLR2004", "F401",
    "PLC0415", # Import should be at top-level
    "B007",    # Loop control variable not used
    "B017",    # Do not assert blind exception
    "F841",    # Local variable assigned but never used
    "RUF001",  # Ambiguous characters
    "RUF002",  # Ambiguous characters
    "RUF003",  # Ambiguous characters
    "RUF012",  # Mutable class attributes
    "UP035",   # Deprecated typing
    "C401",    # Unnecessary generator
    "RUF059",  # Unused unpacked variable
    "SIM117",  # Use contextlib.suppress
]
"__init__.py" = ["F401"]  # Unused imports in __init__ files

[tool.ruff.lint.isort]
known-first-party = ["agents", "rag", "cache", "models", "services", "realtime"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like `field = Field(...)` in Pydantic
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "pydantic.Field"]

# ===========================
# Black Configuration
# ===========================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | __pycache__
    | build
    | dist
)/
'''

# ===========================
# MyPy Configuration
# ===========================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ===========================
# Pytest Configuration
# ===========================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --strict-markers -ra"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests (run separately with --run-slow)",
    "e2e: End-to-end tests (full pipeline)",
    "performance: Performance and benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ===========================
# Coverage Configuration
# ===========================

[tool.coverage.run]
source = ["."]
branch = true
parallel = true
omit = [
    "tests/*",
    "__pycache__/*",
    "setup.py",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
title = "Scholar Agent Test Coverage"

# ===========================
# Bandit Security Scanner
# ===========================

[tool.bandit]
exclude_dirs = ["tests", "__pycache__", ".venv"]
skips = ["B101", "B104", "B311"]  # Assert, bind all interfaces, random
