# Scholar Agent Backend Configuration
# This file configures linting, formatting, and other development tools

[metadata]
name = scholar-agent
version = 1.0.0
description = Production-grade AI Research Assistant
author = Scholar Agent Team
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi>=0.111.0
    uvicorn>=0.29.0
    sqlalchemy>=2.0.29
    pydantic>=2.8.0
    celery[redis]>=5.4.0
    qdrant-client>=1.9.0
    langgraph>=0.2.0

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-asyncio>=0.23.0
    pytest-cov>=4.1.0
    pytest-xdist>=3.5.0
    httpx>=0.27.0
    ruff>=0.3.0
    black>=24.0.0
    mypy>=1.8.0
    bandit>=1.7.0
    safety>=3.0.0

[flake8]
max-line-length = 100
extend-ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    .tox,
    tests/__pycache__

per-file-ignores =
    __init__.py: F401
    tests/*: S101, S105, S106

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
exclude = tests/

[mypy-tests.*]
ignore_errors = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
asyncio_mode = auto
markers =
    unit: Unit tests
    integration: Integration tests
    slow: Slow tests
    e2e: End-to-end tests
    performance: Performance tests

[isort]
profile = black
line_length = 100
known_first_party = agents,rag,cache,models,services,realtime
known_third_party = fastapi,sqlalchemy,celery,pydantic,qdrant_client,langgraph
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = __pycache__,.git,.venv,venv

[bandit]
exclude_dirs = tests,__pycache__,.venv
skips = B101,B104,B105,B311
